Astroディレクトリの構造の完成。Vercelサーバーとも接続済み。CSSをインストールする前の最終版。

--- a/src/layouts/BaseLayout.astro
+++ b/src/layouts/BaseLayout.astro
@@ -34,6 +34,9 @@ const {
 	<link rel="preconnect dns-prefetch" href="//cdn.browsee.io">
 	<link rel="preconnect dns-prefetch" href="//connect.facebook.net">
 
+	<!-- favicon関連 -->
+  <link rel="shortcut icon" href="/favicon.ico" />
+
 	<!-- 下記は各ページから固有のhead要素を受け取るためのタグ -->
 	<slot name="head" />
 </head>
