--- a/src/layouts/BaseLayout.astro
+++ b/src/layouts/BaseLayout.astro
@@ -1,4 +1,8 @@
 ---
+import "../styles/global.css";
+import Header from "../components/Header.astro";
+import Footer from "../components/Footer.astro";
+
 export interface Props {
   title?: string;
   description?: string;
@@ -45,8 +49,11 @@ const {
 	<noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-KX8ZQFSX"
 	height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 	<!-- End Google Tag Manager (noscript) -->
+
+	<Header />
 	<main>
 		<slot />
 	</main>
+	<Footer />
 </body>
 </html>
