--- a/src/pages/jobs/index.astro
+++ b/src/pages/jobs/index.astro
@@ -4,45 +4,102 @@ import { getJobsFromNotion } from '../../lib/notion.js';
 
 const pageUrl = 'https://taxi-mate.jp/jobs/';
 const pageTitle = '求人一覧｜タクシーメイト';
-const pageDescription = 'タクシーメイトはタクシー業界専門の転職支援サービスです。厳選した月給45万円以上が目指せる会社のみを紹介。タクシー業界を知り尽くしたキャリアアドバイザーがあなたの転職をサポートします。';
+const pageDescription =
+  'タクシーメイトはタクシー業界専門の転職支援サービスです。厳選した月給45万円以上が目指せる会社のみを紹介。タクシー業界を知り尽くしたキャリアアドバイザーがあなたの転職をサポートします。';
 
 const jobs = await getJobsFromNotion();
 const jobsCount = jobs.length;
 ---
 
 <BaseLayout title={pageTitle} description={pageDescription} url={pageUrl}>
-		<!-- ページ固有のhead要素 -->
-		<Fragment slot="head">
-			<meta property="og:url" content={pageUrl} />
-			<meta property="og:title" content={pageTitle} />
-			<meta property="og:description" content={pageDescription} />
-		</Fragment>
+  <!-- ページ固有のhead要素 -->
+  <Fragment slot="head">
+    <meta property="og:url" content={pageUrl} />
+    <meta property="og:title" content={pageTitle} />
+    <meta property="og:description" content={pageDescription} />
+  </Fragment>
 
-		<h1>求人一覧</h1>
-		{jobs.map((job, index) => {
-		  const slug = `job-${index + 1}`;
-		  const detailUrl = `/jobs/${slug}/`;
+  <!-- 求人一覧 -->
+  <div class="bg-white">
+    <div
+      class="mx-auto max-w-2xl px-4 py-16 sm:px-6 sm:py-24 lg:max-w-7xl lg:px-8"
+    >
+      <h2 class="sr-only">求人一覧</h2>
 
-		  return (
-		    <div class="job-card" key={job.id}>
-				<h2>{job.company}</h2>
-				<p><strong>ID:</strong> {job.id}</p>
-				<p><strong>タイトル:</strong> <a href={detailUrl}>{job.title}</a></p>
-				<p><strong>勤務地:</strong> {job.location}</p>
-				<p><strong>グループ:</strong> {job.group.join(', ')}</p>
-				<p><strong>募集状況:</strong> {job.status}</p>
-				<p><strong>配車アプリ:</strong> {job.dispatchApps.join(', ')}</p>
-				<p><strong>本社住所:</strong> {job.headOffice}</p>
-				<p><strong>Notion URL:</strong> <a href={job.notionUrl} target="_blank">{job.notionUrl}</a></p>
-		    </div>
-		  );
-		})}
+      <div
+        class="grid grid-cols-1 gap-x-6 gap-y-10 sm:grid-cols-2 lg:grid-cols-3 xl:grid-cols-4 xl:gap-x-8"
+      >
+        {
+          jobs.map((job, index) => {
+            const slug = `job-${index + 1}`;
+            const detailUrl = `/jobs/${slug}/`;
 
+            return (
+              <a href="#" class="group" key={job.id}>
+                <img
+                  src="https://tailwindcss.com/plus-assets/img/ecommerce-images/category-page-04-image-card-01.jpg"
+                  alt="Tall slender porcelain bottle with natural clay textured body and cork stopper."
+                  class="aspect-square w-full rounded-lg bg-gray-200 object-cover group-hover:opacity-75 xl:aspect-7/8"
+                />
+                <h3 class="mt-4 text-sm text-gray-700">{job.company}</h3>
+                <p class="mt-1 text-lg font-medium text-gray-900">
+                  {job.headOffice}
+                </p>
+              </a>
+            );
+          })
+        }
+      </div>
+      <p>
+        {
+          jobsCount === 0 ? (
+            <p>現在、募集中の求人はありません。</p>
+          ) : (
+            <p>求人は {jobsCount} 件です</p>
+          )
+        }
+      </p>
+    </div>
+  </div>
 
+  <!-- ループ表示用 -->
+  {
+    jobs.map((job, index) => {
+      const slug = `job-${index + 1}`;
+      const detailUrl = `/jobs/${slug}/`;
 
-		{jobsCount === 0 ? (
-			<p>現在、募集中の求人はありません。</p>
-		) : (
-			<p>求人は {jobsCount} 件です</p>
-		)}
+      return (
+        <div class="job-card" key={job.id}>
+          <h2>{job.company}</h2>
+          <p>
+            <strong>ID:</strong> {job.id}
+          </p>
+          <p>
+            <strong>タイトル:</strong> <a href={detailUrl}>{job.title}</a>
+          </p>
+          <p>
+            <strong>勤務地:</strong> {job.location}
+          </p>
+          <p>
+            <strong>グループ:</strong> {job.group.join(', ')}
+          </p>
+          <p>
+            <strong>募集状況:</strong> {job.status}
+          </p>
+          <p>
+            <strong>配車アプリ:</strong> {job.dispatchApps.join(', ')}
+          </p>
+          <p>
+            <strong>本社住所:</strong> {job.headOffice}
+          </p>
+          <p>
+            <strong>Notion URL:</strong>{' '}
+            <a href={job.notionUrl} target="_blank">
+              {job.notionUrl}
+            </a>
+          </p>
+        </div>
+      );
+    })
+  }
 </BaseLayout>
