CTAのコンポーネントを作成。

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,5 +1,6 @@
 ---
 import BaseLayout from '../layouts/BaseLayout.astro';
+import CTA from '../components/CTA.astro';
 
 const pageUrl = 'https://taxi-mate.jp/';
 const pageTitle = 'タクシーメイト';
@@ -548,6 +549,8 @@ const pageDescription =
       </div>
     </div>
   </section>
+
+  <CTA />
 
   <!-- よくある質問 -->
   <div class="bg-white">
