CTAを各ページに導入

--- a/src/pages/about/index.astro
+++ b/src/pages/about/index.astro
@@ -1,5 +1,6 @@
 ---
 import BaseLayout from '../../layouts/BaseLayout.astro';
+import CTA from '../../components/CTA.astro';
 
 const pageUrl = 'https://taxi-mate.jp/about/';
 const pageTitle = 'タクシーメイトとは？';
@@ -168,4 +169,7 @@ const features = [
       </div>
     </div>
   </section>
+
+  <!-- CTA -->
+  <CTA />
 </BaseLayout>
