--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -78,10 +78,10 @@ const pageDescription =
                 href="/download"
                 class="rounded-md bg-indigo-600 px-3.5 py-2.5 text-sm font-semibold text-white shadow-xs hover:bg-indigo-500 focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-indigo-600"
               >
-                今すぐ始める
+                転職支援サービスに登録
               </a>
               <a href="/demo" class="text-sm/6 font-semibold text-gray-900">
-                デモを見る <span aria-hidden="true">→</span>
+                メールで求人を受け取る <span aria-hidden="true">→</span>
               </a>
             </div>
           </div>
@@ -559,7 +559,7 @@ const pageDescription =
         <h2
           class="text-4xl font-semibold tracking-tight text-gray-900 sm:text-5xl"
         >
-          Frequently asked questions
+          よくある質問
         </h2>
         <dl class="mt-16 divide-y divide-gray-900/10">
           <div class="py-6 first:pt-0 last:pb-0">
@@ -572,7 +572,7 @@ const pageDescription =
                 aria-expanded="false"
               >
                 <span class="text-base/7 font-semibold"
-                  >What&#039;s the best thing about Switzerland?</span
+                  >紹介費用などは発生しますか？</span
                 >
                 <span class="ml-6 flex h-7 items-center">
                   <!--
@@ -618,9 +618,7 @@ const pageDescription =
             </dt>
             <dd class="mt-2 pr-12" id="faq-0">
               <p class="text-base/7 text-gray-600">
-                I don&#039;t know, but the flag is a big plus. Lorem ipsum dolor
-                sit amet consectetur adipisicing elit. Quas cupiditate
-                laboriosam fugiat.
+                求職者様に対しての紹介手数料などの費用については一切発生いたしません。面接の際に訪問する企業への交通費のみご負担頂いておりますので予めご了承ください。
               </p>
             </dd>
           </div>
