--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,11 +1,14 @@
 ---
 import BaseLayout from '../layouts/BaseLayout.astro';
 import CTA from '../components/CTA.astro';
+import { getLatestJobsFromNotion } from '../lib/notion.js';
 
 const pageUrl = 'https://taxi-mate.jp/';
 const pageTitle = 'タクシーメイト';
 const pageDescription =
   'タクシーメイトはタクシー業界専門の転職支援サービスです。厳選した月給45万円以上が目指せる会社のみを紹介。タクシー業界を知り尽くしたキャリアアドバイザーがあなたの転職をサポートします。';
+
+const jobs = await getLatestJobsFromNotion();
 ---
 
 <BaseLayout title={pageTitle} description={pageDescription} url={pageUrl}>
@@ -356,76 +359,50 @@ const pageDescription =
         </p>
       </div>
       <div
-        class="mx-auto mt-16 grid max-w-2xl grid-cols-1 gap-x-8 gap-y-20 lg:mx-0 lg:max-w-none lg:grid-cols-3"
+        class="mx-auto mt-16 grid max-w-2xl auto-rows-fr grid-cols-1 gap-8 sm:mt-20 lg:mx-0 lg:max-w-none lg:grid-cols-3"
       >
-        <article class="flex flex-col items-start justify-between">
-          <div class="relative w-full">
-            <img
-              src="https://images.unsplash.com/photo-1496128858413-b36217c2ce36?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=3603&q=80"
-              alt=""
-              class="aspect-video w-full rounded-2xl bg-gray-100 object-cover sm:aspect-2/1 lg:aspect-3/2"
-            />
-            <div
-              class="absolute inset-0 rounded-2xl ring-1 ring-gray-900/10 ring-inset"
-            >
-            </div>
-          </div>
-          <div class="max-w-xl">
-            <div class="mt-8 flex items-center gap-x-4 text-xs">
-              <time datetime="2020-03-16" class="text-gray-500"
-                >Mar 16, 2020</time
-              >
-              <a
-                href="#"
-                class="relative z-10 rounded-full bg-gray-50 px-3 py-1.5 font-medium text-gray-600 hover:bg-gray-100"
-                >Marketing</a
-              >
-            </div>
-            <div class="group relative">
-              <h3
-                class="mt-3 text-lg/6 font-semibold text-gray-900 group-hover:text-gray-600"
-              >
-                <a href="#">
-                  <span class="absolute inset-0"></span>
-                  Boost your conversion rate
+        {
+          jobs.map((job) => (
+            <article class="relative isolate flex flex-col justify-end overflow-hidden rounded-2xl bg-gray-900 px-8 pt-80 pb-8 sm:pt-48 lg:pt-80">
+              <img
+                src="/images/banner-square.png"
+                alt={`${job.company}の求人画像`}
+                class="absolute inset-0 -z-10 size-full object-cover"
+              />
+              <div class="absolute inset-0 -z-10 bg-gradient-to-t from-gray-900 via-gray-900/40" />
+              <div class="absolute inset-0 -z-10 rounded-2xl ring-1 ring-gray-900/10 ring-inset" />
+
+              <div class="flex flex-wrap items-center gap-y-1 overflow-hidden text-sm/6 text-gray-300">
+                {job.dispatchApps && job.dispatchApps.length > 0 && (
+                  <div class="flex items-center gap-x-2">
+                    {job.dispatchApps.map((app) => (
+                      <a
+                        href="#"
+                        class="relative z-10 rounded-full bg-gray-50 px-3 font-medium text-gray-600 hover:bg-gray-100"
+                      >
+                        {app}
+                      </a>
+                    ))}
+                  </div>
+                )}
+                <span class="mr-8">{job.location}</span>
+              </div>
+              <h3 class="mt-3 text-lg/6 font-semibold text-white">
+                <a href={`/jobs/${job.id}/`}>
+                  <span class="absolute inset-0" />
+                  {job.title}
                 </a>
               </h3>
-              <p class="mt-5 line-clamp-3 text-sm/6 text-gray-600">
-                Illo sint voluptas. Error voluptates culpa eligendi. Hic vel
-                totam vitae illo. Non aliquid explicabo necessitatibus unde. Sed
-                exercitationem placeat consectetur nulla deserunt vel. Iusto
-                corrupti dicta.
-              </p>
-            </div>
-            <div class="relative mt-8 flex items-center gap-x-4">
-              <img
-                src="https://images.unsplash.com/photo-1519244703995-f4e0f30006d5?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=facearea&facepad=2&w=256&h=256&q=80"
-                alt=""
-                class="size-10 rounded-full bg-gray-100"
-              />
-              <div class="text-sm/6">
-                <p class="font-semibold text-gray-900">
-                  <a href="#">
-                    <span class="absolute inset-0"></span>
-                    Michael Foster
-                  </a>
-                </p>
-                <p class="text-gray-600">Co-Founder / CTO</p>
-              </div>
-            </div>
-          </div>
-        </article>
-
-        <!-- More posts... -->
+            </article>
+          ))
+        }
       </div>
-      <div class="flex justify-center mt-8">
+      <div class="mt-8 flex justify-center">
         <a
-          href="/jobs"
-          class="text-sm font-medium text-indigo-600 hover:text-indigo-500"
+          href="/jobs/"
+          class="text-sm/6 font-semibold text-indigo-600 hover:text-indigo-500"
+          >求人一覧を見る <span aria-hidden="true">&rarr;</span></a
         >
-          全ての求人を見る
-          <span aria-hidden="true"> &rarr;</span>
-        </a>
       </div>
     </div>
   </div>
