--- a/src/components/CTA.astro
+++ b/src/components/CTA.astro
@@ -47,8 +47,8 @@
       </div>
       <div class="relative mt-16 h-80 lg:mt-8">
         <img
-          class="absolute top-0 left-0 w-228 max-w-none rounded-md bg-white/5 ring-1 ring-white/10"
-          src="https://tailwindcss.com/plus-assets/img/component-images/dark-project-app-screenshot.png"
+          class="absolute top-10 -left-16 w-228 max-w-none rounded-md"
+          src="/images/taxi-left.png"
           alt="App screenshot"
           width="1824"
           height="1080"
